--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
           pip install wheel setuptools pip -Uqq
           pip install -r ./scripts/requirements.txt -f https://download.pytorch.org/whl/cpu/torch_stable.html -q
           pip uninstall -y tqdm
-          npm i -g pnpm@^7
+          npm i -g pnpm@7
           pnpm i --frozen-lockfile --color
 
       - name: Download datasets
